Updated all packages and fixed eslint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - name: yarn, lint, build and test
         run: |
           yarn
+          yarn lint:fix
           yarn lint
           yarn build
           yarn test
