--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: yarn, lint, build and test
+      - name: yarn
+        run: yarn
+          
+      - name: lint
         run: |
-          yarn
           yarn lint:fix
           yarn lint
-          yarn build
-          yarn test
+
+      - name: build
+        run: yarn build
+          
+      - name: test
+        run: yarn test
