--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "node-red-node-test-helper": "^0.3.3",
     "onchange": "^7.1.0",
     "prettier": "^3.2.5",
-    "rollup": "^2.23.0",
+    "rollup": "3.29.4",
+    "sinon": "^17.0.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
