Added pre-commit and remove-node cmd

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.2.3",
   "description": "Description of the node set here",
   "scripts": {
-    "add-node": "node ./utils/add-node.js",
+    "add-node": "node ./utils/add-node.cjs",
+    "remove-node": "node ./utils/remove-node.cjs",
     "copy": "copyfiles -u 2 \"./src/nodes/**/*.{png,svg}\" \"./dist/nodes/\"",
     "build:editor": "rollup -c rollup.config.editor.js",
     "build:editor:watch": "rollup -c rollup.config.editor.js -w",
@@ -36,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@typescript-eslint/typescript-estree": "^7.0.2",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "colorette": "^2.0.20",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
@@ -49,6 +51,7 @@
     "node-red": "^3.1.5",
     "node-red-node-test-helper": "^0.3.3",
     "onchange": "^7.1.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.2.5",
     "rollup": "2.79.0",
     "sinon": "^17.0.1",
