--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,27 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x,20.x]
+        node-version: [16.x, 18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v2.3.4
+      
       - name: Setup Node.js ${{ matrix.node-version }} environment
         uses: actions/setup-node@v2.1.2
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: yarn
+      - name: Install dependencies
         run: yarn
-          
-      - name: lint
-        run: |
-          yarn lint:fix
-          yarn lint
+        
+      - name: Lint and Fix
+        run: yarn lint:fix
+        
+      - name: Lint
+        run: yarn lint
 
-      - name: build
+      - name: Build
         run: yarn build
           
-      - name: test
+      - name: Test
         run: yarn test
