Added docker local support and README update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,14 @@ jobs:
       - name: Lint
         run: yarn lint
 
+      - name: Build Docker image
+        run: yarn build:docker
+
       - name: Build
         run: yarn build
-          
+      
       - name: Test
         run: yarn test
+
+      - name: Validate
+        run: yarn validate
