--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,11 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [14.0x, 16.x, 18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v2.3.4
-      
+
       - name: Setup Node.js ${{ matrix.node-version }} environment
         uses: actions/setup-node@v4.0.2
         with:
@@ -20,10 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: yarn
-        
+
       - name: Lint and Fix
         run: yarn lint:fix
-        
+
       - name: Lint
         run: yarn lint
 
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build
         run: yarn build
-      
+
       - name: Test
         run: yarn test
 
