--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<Description of the node set here>",
   "repository": "https://github.com/pdrivom/node-red-node-typescript-template",
   "engines": {
-  "node": "^16 || ^18 || ^20"
+    "node": "^14 ||^16 || ^18 || ^20"
   },
   "scripts": {
     "add-node": "node ./utils/add-node.cjs",
@@ -26,7 +26,9 @@
   },
   "author": "Pedro Marques",
   "license": "MIT",
-  "keywords": [ "node-red" ],
+  "keywords": [
+    "node-red"
+  ],
   "node-red": {
     "version": ">=3.0.0",
     "nodes": {
