Fixed ci build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,8 @@ jobs:
       - name: Lint
         run: yarn lint
 
-      - name: Build Docker image
-        run: yarn build:docker
-
       - name: Build
-        run: yarn build
+        run: yarn build:ci
 
       - name: Test
         run: yarn test
