--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/pdrivom/node-red-node-typescript-template"
   },
   "engines": {
-    "node": "^16 || ^18 || ^20"
+    "node": "^14 || ^16 || ^18 || ^20"
   },
   "scripts": {
     "add-node": "node ./utils/add-node.cjs",
@@ -34,39 +34,30 @@
     "node-red"
   ],
   "node-red": {
-    "version": ">=3.0.0",
+    "version": ">=1.3.7",
     "nodes": {
       "transform-text": "./dist/nodes/transform-text/transform-text.js"
     }
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.19",
     "@types/node-red": "^1.3.4",
     "@types/node-red-node-test-helper": "^0.3.3",
     "@types/sinon": "^17.0.3",
-    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "@typescript-eslint/typescript-estree": "^7.0.2",
-    "babel-plugin-transform-import-meta": "^2.2.1",
     "colorette": "^2.0.20",
     "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
     "mustache": "^4.2.0",
     "node-red": "^3.1.5",
     "node-red-dev": "^0.1.6",
     "node-red-node-test-helper": "^0.3.3",
-    "onchange": "^7.1.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^3.2.5",
     "rollup": "2.79.0",
     "sinon": "^17.0.1",
