--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
     "@types/node-red": "^1.3.4",
     "@types/node-red-node-test-helper": "^0.3.3",
     "@types/sinon": "^17.0.3",
